infra/k8s/frontend/overlays/prod/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kobo-frontend
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: kobo-frontend
          image: ghcr.io/mefoumnamarie028-cell/kobo-frontend:prod-latest
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 1Gi
